objects/RackspaceCredentials__c.object
<CustomObject>
    <fields>
        <fullName>API_key__c</fullName>
        <label>API key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Name__c</fullName>
        <label>Container Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <label>Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Container_Name__c</fullName>
        <label>Private Container Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <defaultValue>&quot;USA&quot;</defaultValue>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>&quot;v1.0&quot;</defaultValue>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>